# backup-github-to-gitlab

./: .env.example  .gitignore  README.md  backup.py  config.example.yaml  pyproject.toml  requirements.txt
.specs/features/core-backup/: design.md  spec.md  tasks.md
.specs/features/issues-wiki-backup/: design.md  spec.md  tasks.md
.specs/project/: PROJECT.md  ROADMAP.md  STATE.md
docs/: humans.txt  index.html  llms.txt  robots.txt  sitemap.xml
src/: backup_runner.py  config.py  git_ops.py  github_client.py  gitlab_client.py  issue_migrator.py  models.py
src/gh2gl/: backup_runner.py  cli.py  config.py  github_client.py  gitlab_client.py
