[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gh2gl"
version = "1.0.0"
description = "Mirror GitHub repositories to GitLab automatically."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Fernando Paladini", email = "fnpaladini@gmail.com" }]
requires-python = ">=3.11"
keywords = ["github", "gitlab", "backup", "mirror", "git"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: System :: Archiving :: Backup",
]
dependencies = [
    "PyGithub>=2.3",
    "python-gitlab>=4.4",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/paladini/backup-github-to-gitlab"

[project.scripts]
gh2gl = "gh2gl.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gh2gl"]
